...
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toEndOf="@+id/myImageView"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Choose Image"/>

    <EditText
        android:id="@+id/shoppingList_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:hint="Name of the shopping List"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myImageView" />

    <Button
        android:id="@+id/btn_create_ShoppingList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
...
